--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
     "granim": "^2.0.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
