--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "tailwind-scrollbar": "^4.0.2",
     "three": "^0.180.0"
   },
   "devDependencies": {
